--- a/lb_widget.ui
+++ b/lb_widget.ui
@@ -17,7 +17,20 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0,20,0,0">
      <item>
-      <widget class="stack_panel" name="list_unassigned"/>
+      <widget class="stack_panel" name="list_unassigned">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>100</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="Line" name="line">
